Minor updates to address problems (e.g., deprecated methods)